[project]
name = "mlx-experiments"
version = "0.1.0"
description = "Running multiple MLX experiments with SLMs"
authors = [
    {name = "Gerardo Baro",email = "gerardo.baro@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlx (>=0.29.4,<0.30.0)",
    "mlx-lm (>=0.28.3,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
